# mlir-track-src

./: .gitignore  README.md  pyproject.toml
examples/: conv_input.mlir  conv_lowered.mlir  input.mlir  track.mlir
src/mlir_track_src/: __init__.py  main.py  op_src_track.py  ops.py  src_loc.py  track_src.py
tests/: test_op_src_track.py  test_ops.py  test_src_loc.py
