[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlir-track-src"
version = "0.1.0"
description = "Tracking operations using source locations in MLIR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer==0.20.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[project.scripts]
mlir-track-src = "mlir_track_src.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
